# FastAPI-multitenant-Event-Driven-Clean-Architecture

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  tenant_routes.py  user_routes.py
app/application/dtos/: tenant_dtos.py  user_dtos.py
app/application/exceptions/: __init__.py  tenant_exceptions.py  user_exceptions.py
app/application/extensions/: pagination.py
app/application/handlers/: __init__.py  user_event_handlers.py
app/application/use_cases/: tenant_use_cases.py  user_use_cases.py
app/domain/entities/: tenant.py  user.py
app/domain/events/: tenant_events.py  user_events.py
app/domain/interfaces/: event_dispatcher.py  mail_service.py  message_queue_service.py  refresh_token_repository.py  tenant_repository.py  token_service.py  unit_of_work.py  user_repository.py
app/infrastructure/authentication/: token_service.py
app/infrastructure/database/: __init__.py  connection.py  dependencies.py  models.py
app/infrastructure/database/repositories/: refresh_token_repository.py  tenant_repository.py  user_repository.py
app/infrastructure/events/: __init__.py  event_dispatcher.py
app/infrastructure/external_services/: rabbitmq_service.py  resend_email_service.py
app/ioc/: container.py
app/shared/: config.py  events.py  pagination.py  result_.py
app/shared/templates/emails/: load_templates.py  profile_updated.html  (+1 more)
app/tests/: conftest.py
app/tests/api/: tenants_test.py  users_test.py
