[tool.poetry]
name = "fastapi-event-driven-clean-arch"
version = "0.1.0"
description = "FastAPI project with Clean Architecture, Event-Driven design, SQLModel, and Dependency Injection"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
fastapi-events = "^0.12.2"
dependency-injector = "^4.41.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
attrs = "^25.4.0"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.11"
aiosqlite = "^0.21.0"
resend = "^2.17.0"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
aio-pika = "^9.5.8"
testcontainers = {extras = ["postgres"], version = "^4.13.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
factory-boy = "^3.3.0"
httpx = "^0.25.2"
testcontainers = {extras = ["postgres"], version = "^4.9.0"}
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
